# rust-tiny-build

./: Cargo.toml  README.md
src/: main.rs
